<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapTypeText" 
        android:textColor="#ff00fa9a" 
        android:textSize="25sp"
     />
  
     <RadioGroup 
        android:id="@+id/maptypeRadioGroup"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">

   		<RadioButton
   		    android:id="@+id/mapNormalRadio"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:text="@string/mapNormalText" 
   		    android:textColor="#ff0000ff"
   		    android:textSize="15sp"
   		    android:onClick="onRadioButtonClicked"/>

    	<RadioButton android:id="@+id/mapSatelliteRadio"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/mapSatelliteText"
        	android:textColor="#ff0000ff"
   		    android:textSize="15sp"
        	android:onClick="onRadioButtonClicked"/>
    	
    	<RadioButton
   		    android:id="@+id/mapTerrainRadio"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:text="@string/mapTerrainText" 
   		    android:textColor="#ff0000ff"
   		    android:textSize="15sp"
   		    android:onClick="onRadioButtonClicked"/>
    	
    	<RadioButton
   		    android:id="@+id/mapHybridRadio"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:text="@string/mapHybridText" 
   		    android:textColor="#ff0000ff"
   		    android:textSize="15sp"
   		    android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
	

</LinearLayout>