<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView android:text="@string/directionsText"
        android:textColor="#ffff1493"
        android:textSize="20sp"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"/> 
		
    <Button android:id="@+id/btnspk"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btnSpeak"/>
        
    <EditText android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/directionsText"
        android:hint="@string/testText"
        android:textColor="#ff000000"
        android:textSize="15sp"
        />
    
    

</LinearLayout>